Turns out the problem I was tracking down was a jQuery click on iOS issue and nothing to do with Heroku and sessions. Just use a regular form submit since the ajax event is not important for logging out

--- a/public/css/pokerSignup.css
+++ b/public/css/pokerSignup.css
@@ -2,6 +2,10 @@ p {
     font-size: 120%;
 }
 
+.logoutForm {
+    display: inline;
+}
+
 .hellotext {
     display: inline-block;
     margin-top: 5px;
